# Verlet-Physics-Solver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
backup/: physics-0.1.txt  physics-h-0.1.txt
src/: double.cpp  physics.cpp  physics.hpp  verlet_integration.cpp
